fix + feat: fix dto product, category and update exception