@@ -1,29 +1,32 @@
 package com.example.backend.mapper;
 
-import com.example.backend.dto.*;
+import com.example.backend.dto.category.CategoryRequest;
+import com.example.backend.dto.product.ProductCreationRequest;
+import com.example.backend.dto.product.ProductRequest;
+import com.example.backend.dto.product.ProductUpdateRequest;
+import com.example.backend.dto.product_image.ProductImageCreationRequest;
+import com.example.backend.dto.product_image.ProductImageRequest;
 import com.example.backend.entity.*;
-
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class ProductMapper {
-
-    // Entity -> DTO
-    public static ProductCreationRequest toDTO(Product product) {
-        return new ProductCreationRequest(
+    // Entity -> DTO Request
+    // product return data
+    public static ProductRequest toDTORequest(Product product) {
+        return new ProductRequest(
                 product.getId(),
                 product.getName(),
                 product.getDescription(),
                 product.getPrice(),
                 product.getQuantity(),
-                product.getCreatedAt(),
                 toCategoryDTO(product.getCategory()),
-                toImageDTOList(product.getImages())
+                toImageUrlList(product.getImages())
         );
     }
 
-    // DTO -> Entity
-    public static Product toEntity(ProductCreationRequest dto, Category category) {
+    // DTO -> Entity Create
+    public static Product toEntityCreate(ProductCreationRequest dto, Category category) {
         Product product = new Product();
         product.setName(dto.getName());
         product.setDescription(dto.getDescription());
@@ -33,15 +36,32 @@ public class ProductMapper {
         return product;
     }
 
-    private static CategoryCreationRequest toCategoryDTO(Category category) {
-        if (category == null) return null;
-        return new CategoryCreationRequest(category.getId(), category.getName(), category.getImageUrl());
+    // DTO -> Entity Update
+    public static Product toEntityUpdate(ProductUpdateRequest dto, Category category) {
+        Product product = new Product();
+        product.setName(dto.getName());
+        product.setDescription(dto.getDescription());
+        product.setPrice(dto.getPrice());
+        product.setQuantity(dto.getQuantity());
+        product.setCategory(category);
+        return product;
     }
 
-    private static List<ProductImageCreationRequest> toImageDTOList(List<ProductImage> images) {
-        if (images == null) return null;
+    private static CategoryRequest toCategoryDTO(Category category) {
+        if (category == null) return null;
+        return new CategoryRequest(category.getId(), category.getName(), category.getImageUrl());
+    }
+
+    public static List<String> toImageUrlList(List<ProductImage> images) {
+        if (images == null) {
+            return List.of();
+        }
         return images.stream()
-                .map(img -> new ProductImageCreationRequest(img.getId(), img.getImageUrl()))
-                .collect(Collectors.toList());
+                .map(ProductImage::getImageUrl)
+                .toList();
+    }
+
+    public static List<ProductRequest> toResponseList(List<Product> products) {
+        return products.stream().map(ProductMapper::toDTORequest).collect(Collectors.toList());
     }
 }
